syntax = "proto3";
option csharp_namespace = "GrpcService101";

package max;

message MaxRequest{
  int32 number = 1;
}

message MaxResponse{
  int32 max = 1;
}

service Max{
  rpc ComputeMax (stream MaxRequest) returns (stream MaxResponse);
}
